src/test/deca/syntax/invalid/created/miscellaneous/bad_include.deca
// Description :
//    include inconnu
//
// Resultats :
//		Syntaxe error

#include "file_inconnu"
{


}